[project]
name = "elmo-tune-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2023.0.0",
    "cgroup-monitor==1.0.0",
    "click>=8.0.0",
    "deepdiff==6.7.1",
    "httpx>=0.25.0,<0.28.0",
    "ipykernel>=7.1.0",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "langchain-openai==0.2.6",
    "matplotlib==3.7.4",
    "openai==1.54.3",
    "pandas==2.0.3",
    "psutil==5.9.6",
    "py-cpuinfo==9.0.0",
    "pydantic>=2.0.0",
    "python-dotenv==1.0.0",
    "requests>=2.32.5",
    "scipy==1.14.1",
    "tqdm==4.66.1",
]
